<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <include layout="@layout/settings_actionbar" />

    <com.pisen.ott.widget.FocusLinearLayout
        android:id="@+id/securitySettingsLayout"
        style="@style/AppTable" >

        <TextView
            style="@style/table_title"
            android:text="@string/security" />

        <RelativeLayout
            android:id="@+id/unknownSourceSettings"
            style="@style/AppTableRow.Top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                style="@style/table_row_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/install_unkownsource_app" />

            <TextView
                android:id="@+id/txtUnknownSource"
                style="@style/table_row_content"
                android:layout_alignParentRight="true"
                android:text="@string/refused" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/adbDebugSettings"
            style="@style/AppTableRow.Bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                style="@style/table_row_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/adb_debug" />

            <TextView
                android:id="@+id/txtUsbDebug"
                style="@style/table_row_content"
                android:layout_alignParentRight="true"
                android:text="@string/closed" />
        </RelativeLayout>
    </com.pisen.ott.widget.FocusLinearLayout>

</LinearLayout>